# pidgin-remember-read-status

./: .travis.yml  CMakeLists.txt  Makefile  README.md  conv_memory.c  run_cppcheck.sh
include/: conversation_history.h
src/: CMakeLists.txt  conv_memory.c  conversation_history.c  remember_read_status.c
test/: CMakeLists.txt  all_tests.cc  test_conversation_history.cc
